# De-Time

./: .coveragerc  .coveragerc.package  .gitignore  404.html  AGENT_INPUT_CONTRACT.md  AGENT_MANIFEST.json  AGENT_MANIFEST.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DOCS_INDEX.md  De-Time_Codex_task_list.md  De-Time_Codex_task_list_v3.md  De-Time_Codex_task_list_v5.md  De-Time_Codex_task_list_v6.md  De-Time_JMLR_revision_plan.md  De-Time_JMLR_revision_plan_v2.md  De-Time_JMLR_revision_plan_v3.md  De-Time_consistency_checklist_v5.md  De-Time_consistency_checklist_v6.md  De-Time_final_checklist.md  De-Time_final_checklist_v2.md  De-Time_final_checklist_v3.md  De-Time_four_role_review_v6.md  De-Time_multirole_review_v4.md  De-Time_revision_plan_v5.md  De-Time_revision_plan_v6.md  ENTRYPOINTS.md  HOT_TREND_LAB_ADDED.md  JMLR_MLOSS_CHECKLIST.md  JMLR_SOFTWARE_IMPROVEMENTS.md  JMLR_SUBMISSION_CHECKLIST.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  QUANT_TRADING_COLUMN_ADDED.md  (+11 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  wheels.yml
api/: index.html
architecture/: index.html
benchmarks/software_comparison/: generate_comparison_evidence.py
benchmarks/token_benchmarks/: generate_token_benchmarks.py
choose-a-method/: index.html
citation/: index.html
comparison-evidence/: index.html
comparisons/: index.html
config-reference/: index.html
contributing/: index.html
docs/: agent-friendly.md  api.md  architecture.md  choose-a-method.md  citation.md  comparison-evidence.md  comparisons.md  config-reference.md  contributing.md  examples.md  index.md  install.md  jmlr-improvements.md  machine-api.md  method-cards.md  method-matrix.md  method-references.md  methods.md  migration.md  ml-workflows.md  notebook-gallery.md  project-status.md  quickstart.md  reproducibility.md  research-positioning.md  scenarios.md  token-benchmarks.md  why.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/tutorials/: cli-and-profiling.md  decision-guide.md  hot-trend-lab.md  multivariate.md  profiling.md  quant-trading.md  univariate.md  visual-benchmark.md  visual-comparison.md  visual-multivariate.md  visual-univariate.md
evals/agent/: run_agent_evals.py
examples/: method_survey.py  multivariate_mssa.py  optional_multivariate_backends.py  profile_and_cli.py  univariate_quickstart.py  visual_leaderboard_walkthrough.py  visual_method_comparison.py  visual_multivariate_walkthrough.py  visual_univariate_walkthrough.py
examples/data/: example_multivariate.csv  example_series.csv
examples/hot_trends/: README.md  __init__.py  data.py  decomposition.py  scoring.py
examples/notebooks/: de_time_method_gallery.ipynb
examples/quant_trading/: README.md  __init__.py  backtest.py  classic_indicators.py  data.py  decomposition_features.py  features.py  frameworks.py  indicators.py  reporting.py  requirements.txt  signals.py  strategies.py  strategy_baselines.py  strategy_breakout.py  strategy_component_pairs.py  strategy_detime.py  strategy_lab.py  strategy_mean_reversion.py  strategy_method_variants.py  strategy_pairs.py  strategy_rotation.py  validation.py
examples/workflow_comparisons/: README.md  compare_specialist_glue_vs_detime.py
install/: index.html
machine-api/: index.html
method-cards/: index.html
method-matrix/: index.html
method-references/: index.html
methods/: index.html
migration/: index.html
ml-workflows/: index.html
native/src/: common.hpp  dr_ts_reg.cpp  gabor.cpp  ma_baseline.cpp  module.cpp  mssa.cpp  ssa.cpp  std.cpp  vmd.cpp
notebook-gallery/: index.html
overrides/: main.html
quickstart/: index.html
reproducibility/: index.html
scripts/: check_dist_contents.py  check_doc_consistency.py  generate_column_notebook_pages.py  generate_method_cards.py  generate_method_runtime_matrix.py  generate_notebook_gallery.py  generate_performance_snapshot.py  generate_reviewer_bundle.py  generate_schema_assets.py  generate_tutorial_assets.py  prepare_hf_static_space.py  release_smoke_matrix.py
search/: search_index.json
site/: 404.html
src/detime/: __init__.py  __main__.py  _metadata.py  _native.py  backends.py  bench_config.py  benchmark.py  cli.py  core.py  io.py  leaderboard.py  metrics.py  profile.py  recommend.py  registry.py  schemas.py  serialization.py  viz.py
src/synthetic_ts_bench/: __init__.py  budget_controller.py  decomp_eval.py  decomp_methods.py  decomp_plotting.py  decomp_sr_pipeline.py  decomp_utils.py  dr_ts_ae.py  dr_ts_reg.py  gabor.py  gabor_cluster.py  generator.py  mechanism_matcher.py  plotting.py  scenarios.py  sl_lib.py  viz_metrics.py
src/tsdecomp/: __init__.py  __main__.py  _compat.py  _native.py  backends.py  bench_config.py  cli.py  core.py  io.py  leaderboard.py  metrics.py  profile.py  registry.py  viz.py
stylesheets/: brand.css  extra.css
submission/: cover_letter_jmlr_mloss.md  jmlr_mloss_software_paper_draft.md  software_evidence.md
submission/reviewer_bundle/: AGENT_INTERFACE_OVERVIEW.md  COMPANION_RELATIONSHIP.md  INSTALL_VERIFICATION.md  REVIEWER_SOFTWARE_MATRIX.md  TESTING_AND_COVERAGE.md
tests/: conftest.py  test_additional_methods.py  test_branding_imports.py  test_cli.py  test_method_wrappers.py  test_multivariate_core.py  test_multivariate_io.py  test_multivariate_optional_backends.py  test_profile.py  test_runtime_internals.py  test_std.py  test_support_modules.py
tests/cli/: test_cli.py
tests/core/: test_machine_interfaces.py  test_native_agreement.py  test_profile.py  test_registry_catalog.py  test_runtime_and_io.py
tests/docs/: test_generated_method_docs.py  test_tutorial_assets.py
tests/flagship/: test_flagship_methods.py
tests/legacy/: test_tsdecomp_alias.py
tests/mcp/: test_server.py
tests/optional/: test_multivar_optional_backends.py
tests/wrappers/: test_neural_blocks.py  test_wrappers.py
tmp_plan_runs/: profile.txt
tmp_plan_site/: 404.html  index.html  sitemap.xml
token-benchmarks/: index.html
why/: index.html
(+340 files in other folders)
